route-based-policy/manifests/booksapp/webapp_ingress_route.yaml
---
apiVersion: policy.linkerd.io/v1beta1
kind: HTTPRoute
metadata:
  name: webapp-ingress-route
  namespace: booksapp
spec:
  parentRefs:
    - name: webapp
      kind: Server
      group: policy.linkerd.io
  rules:
    - matches:
      - path:
          value: "/"
        method: GET
