route-based-policy/manifests/booksapp/webapp_ingress_route_3.yaml
---
apiVersion: policy.linkerd.io/v1beta1
kind: HTTPRoute
metadata:
  name: webapp-ingress-route
  namespace: booksapp
spec:
  parentRefs:
    - name: webapp
      kind: Server
      group: policy.linkerd.io
  rules:
    - matches:
      - path:
          value: "/"
          type: "Exact"
        method: GET
      - path:
          value: "/css/"
          type: "PathPrefix"
        method: GET
      - path:
          value: "/authors/"
          type: "PathPrefix"
        method: GET
      - path:
          value: "/books/"
          type: "PathPrefix"
        method: GET
