route-based-policy/manifests/booksapp/webapp_probe.yaml
---
apiVersion: policy.linkerd.io/v1beta1
kind: HTTPRoute
metadata:
  name: webapp-probe-route
  namespace: booksapp
spec:
  parentRefs:
    - name: webapp
      kind: Server
      group: policy.linkerd.io
  rules:
    - matches:
      - path:
          value: "/ping"
        method: GET
---
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: webapp-probe-policy
  namespace: booksapp
spec:
  targetRef:
    group: policy.linkerd.io
    kind: HTTPRoute
    name: webapp-probe-route
  requiredAuthenticationRefs:
    - name: webapp-probe-authn
      kind: NetworkAuthentication
      group: policy.linkerd.io
